# silhouette-lang

./: README.md  silhouette.ebnf
compiler/: .clang-format  CMakeLists.txt  codegen.hpp  main.cpp  node.h  node.hpp  parser.cpp  parser.hpp  parser.y  tokens.cpp  tokens.l
compiler/final-test/: fact.sil  fib.sil  func_ir.s  if.sil  math_ir.s  var_ir.s
compiler/parser-bison/: parser.hpp  parser.y
compiler/test/: cmp_1.txt  cmp_2.txt  comment.txt  fn_1.txt  fn_2.txt  fn_3.txt  if_2.txt  if_4.txt  var_decl_2.txt  var_decl_4.txt
compiler/tokenizer-flex/: tokens.cpp
test-llvm/: CMakeLists.txt  codegen.cpp  codegen.hpp  main.cpp  node.hpp  parser  test.txt
test-llvm/final-test/: fact_ir.s  fib_ir.s  func.sil  if_ir.s  loop.sil  loop_ir.sil  math.sil  var.sil
test-llvm/parser-bison/: parser.cpp  parser.hpp  parser.y
test-llvm/test/: assign_1.txt  if_1.txt  if_3.txt  if_4.txt  math_op.txt  not.txt  var_decl_1.txt  var_decl_3.txt
test-llvm/tokenizer-flex/: tokens.cpp  tokens.l
